# XcodeProject/Modules/Sources/Model/TestDependencyKeys/APIClientTestDependencyKey.swift
@@ -9,5 +9,24 @@ public extension DependencyValues {
 
 extension APIClient: TestDependencyKey {
     public static let previewValue = APIClient()
-    public static let testValue = APIClient()
+    public static let testValue = APIClient(
+        deleteAccount: {},
+        updateAccount: { _, _, _ in},
+        linkFCMTokenToAccount: {},
+        logout: {},
+        getSession: { .mock() },
+        startFeedbackSession: { _ in .mock },
+        sendFeedback: { _, _ in true },
+        createEvent: { _ in .mock() },
+        updateEvent: { _, _ in .mock() },
+        deleteEvent: { _ in },
+        createAccount: { _ in .mock() },
+        sessionChangedListener: { .never },
+        joinEvent: { _ in },
+        markEventAsSeen: { _ in },
+        updateAccountRole: { _ in },
+        getMockToken: { "" },
+        getUpdatedSession: { .mock },
+        markActivityAsSeen: { }
+    )
 }
